--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="/css/onsenui-core.min.css">
     <link rel="stylesheet" href="/css/onsen-css-components.min.css">
     <script src="/js/onsenui.min.js"></script>
+    <link rel="manifest" href="/manifest.webmanifest">
+
     <script>
         if('serviceWorker' in navigator) {
           navigator.serviceWorker.register('/sw.js')
@@ -15,6 +16,6 @@
 
 </head>
 <body>
-  <ons-button onclick="alert('You clicked me2!')">Click Me</ons-button>
+  <ons-button onclick="alert('You clicked me6!')">Click Me</ons-button>
 </body>
 </html>
