all move to root folder

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/css/onsenui-core.min.css">
-    <link rel="stylesheet" href="/css/onsen-css-components.min.css">
-    <script src="/js/onsenui.min.js"></script>
-    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="stylesheet" href="onsenui-core.min.css">
+    <link rel="stylesheet" href="onsen-css-components.min.css">
+    <script src="onsenui.min.js"></script>
+    <link rel="manifest" href="manifest.webmanifest">
 
     <script>
         if('serviceWorker' in navigator) {
