--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script>
         if('serviceWorker' in navigator) {
-          navigator.serviceWorker.register('/sw.js')
+          navigator.serviceWorker.register('sw.js')
             .then(() => console.log("Service Worker Registered"))
             .catch(e => console.log(e));
         }
