--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="onsenui-core.min.css">
     <link rel="stylesheet" href="onsen-css-components.min.css">
     <script src="onsenui.min.js"></script>
