--- a/1.html
+++ b/1.html
@@ -22,7 +22,7 @@
             ["вы","ihr"],
             ["они","sie"],
             ["Вы","Sie"],
-            ["мой","main"],
+            ["мой","mein"],
             ["твой","dein"],
             ["его","sein"],
             ["её","ihr"],
@@ -31,7 +31,7 @@
             ["ваш","euer"],
             ["их","ihr"],
             ["Ваш","Ihr"],
-            ["моё","main"],
+            ["моё","mein"],
             ["твоё","dein"],
             ["его","sein"],
             ["её","ihr"],
@@ -40,7 +40,7 @@
             ["ваш","euer"],
             ["их","ihr"],
             ["Ваш","Ihr"],
-            ["моя","maine"],
+            ["моя","meine"],
             ["твоя","deine"],
             ["его","seine"],
             ["её","ihre"],
@@ -49,7 +49,7 @@
             ["ваша","eure"],
             ["их","ihre"],
             ["Ваша","Ihre"],
-            ["мои","maine"],
+            ["мои","meine"],
             ["твои","deine"],
             ["его","seine"],
             ["её","ihre"],
